# bookstore

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  heroku-deploy.yaml  render-deploy.yaml  render-deploy.yml
UsersPaula.cachepypoetryvirtualenvs/: envs.toml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
