[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Paula Rabelo <paula_rabelo2010@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.5"
pytest = "^8.3.4"
factory-boy = "^3.3.1"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
